app-code/jellyfin/jellyfin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      annotations:
        container.apparmor.security.beta.kubernetes.io/jellyfin: unconfined
    spec:
      priorityClassName: high-priority-media
      nodeSelector:
        kubernetes.io/hostname: atlantis
      securityContext:
        seccompProfile:
          type: Unconfined
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: cache-volume
              mountPath: /cache
            - name: movies-volume
              mountPath: /data/movies
            - name: tvshows-volume
              mountPath: /data/tvshows
            - name: audio-volume
              mountPath: /data/audio
#            - name: phantom-volume
#              mountPath: /data/phantom_nfs
            - name: render-dev
              mountPath: /dev/dri
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: cache-volume
          emptyDir: {}
        - name: movies-volume
          persistentVolumeClaim:
            claimName: jellyfin-movies-pvc
        - name: tvshows-volume
          persistentVolumeClaim:
            claimName: jellyfin-tvshows-pvc
        - name: audio-volume
          persistentVolumeClaim:
            claimName: jellyfin-audio-pvc
#        - name: phantom-volume
#          persistentVolumeClaim:
#            claimName: jellyfin-phantom-pvc
        - name: render-dev
          hostPath:
            path: /dev/dri
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: media
spec:
  selector:
    app: jellyfin
  type: NodePort
  ports:
    - port: 8096
      targetPort: 8096
      nodePort: 30096
